# ttt

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.cuda  Dockerfile.rocm  README.md  flake.nix  notes  result-1  result-lib  update-all-intel.sh  update-intel-deps.py  update-intel-unified.py
.github/workflows/: docker.yml
benches/: sweep.fish
benches/patches/: jax-benchmark.py  kernels-all-sizes.patch  kernels-benchmark.py  pytorch-benchmark.py
burn/: .gitignore  Cargo.toml  cubecl.toml  run_experiments.sh
burn/benches/: tile_configs.rs  ttt_benchmark.rs
burn/reference/: validate.py
burn/src/: artifact_info.rs  inference.rs  lib.rs  main.rs  metrics_export.rs  text_generation.rs  training.rs
burn/src/data/: batcher.rs  dataset.rs  mod.rs  pretokenized.rs  tokenizer.rs
burn/src/ttt/: block.rs  layer.rs  linear.rs  linear_adam.rs  lm.rs  mlp.rs  mlp2.rs  mlp3.rs  mlp4.rs  mod.rs  util.rs
burn/src/ttt/cubecl_kernels/: backend.rs  bundle.rs  gelu_tanh.rs  kernel.rs  linear.rs  linear_backward.rs  linear_forward.rs  linear_forward_tile.rs  mod.rs  test_utils.rs  util.rs
burn/src/ttt/cubecl_kernels/gelu/: api.rs  launch.rs  mod.rs  types.rs
burn/src/ttt/cubecl_kernels/impls/: autodiff.rs  cube.rs  fusion.rs  mod.rs
burn/src/ttt/cubecl_kernels/linear_fused/: api.rs  backward.rs  forward.rs  launch.rs  mod.rs  wrapper.rs
burn/src/ttt/cubecl_kernels/linear_fused_tile/: api.rs  backward.rs  backward_optimized.rs  forward.rs  helpers.rs  launch.rs  layer_norm.rs  mod.rs  streaming.rs  streaming_host.rs  streaming_ptr.rs  streaming_ptr_host.rs  streaming_ptr_wrapper.rs  streaming_wrapper.rs  wrapper.rs
burn/src/ttt/cubecl_kernels/ttt/: launch.rs  types.rs
burn/tests/: mma_discovery.rs  validate_full.rs  validate_sweep.rs
crates/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/benches/: tile_configs.rs  ttt_benchmark.rs
crates/cli/src/: artifact_info.rs  bench.rs  lib.rs  main.rs  metrics_export.rs
crates/cli/tests/: validate_full.rs  validate_sweep.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  inner.rs  lib.rs  linear.rs  linear_adam.rs  mlp.rs  mlp2.rs  mlp3.rs  mlp4.rs  test_utils.rs  util.rs
crates/data/src/: pretokenized.rs
crates/fused/: Cargo.toml
crates/fused/src/: lib.rs
crates/fused/src/linear_fused/: api.rs  backward.rs  forward.rs  launch.rs  mod.rs  tests.rs  wrapper.rs
crates/fused/src/linear_fused_tile/: api.rs  backward.rs  forward.rs  helpers.rs  launch.rs  layer_norm.rs  mod.rs  tests.rs  (+5 more)
crates/harness/: Cargo.toml  harness.example.toml  thesis_runs.toml
crates/harness/src/: config.rs  main.rs  runner.rs  runpod.rs  scheduler.rs  state.rs  vram.rs
crates/harness/tests/: resume.rs
crates/kernels/src/: bundle.rs  gelu_tanh.rs  kernel.rs  lib.rs
crates/layer/: Cargo.toml
crates/layer/src/: any_inner.rs  block.rs  lib.rs  lm.rs  ttt.rs
crates/thundercube/: Cargo.toml
crates/thundercube/benches/: broadcast.rs  load_store.rs  reduce.rs
crates/thundercube/examples/: smem_liveness.rs
crates/thundercube/src/: lib.rs  test_utils.rs
crates/training/: Cargo.toml
crates/training/src/: eval.rs  inference.rs  lib.rs  text_generation.rs  training.rs
kokkos/: CMakeLists.txt  Makefile  justfile  ttt.cpp
kokkos-matmul/: .gitignore  CMakeLists.txt  flake.nix  justfile
kokkos-matmul/src/: matmul.cpp
nix/: adaptivecpp.nix  base.nix  base.nix.bak  base.nix.bak2  benchmarks.nix  default.nix  hpc.nix  hwloc_1.nix  kokkos-kernels.nix  kokkos-tools.nix  kokkos.nix  libffi_3_2_1.nix  libffi_3_2_1.nix.bak  mkl.nix  stdblas.nix
nix/intel/: base.nix  default.nix  gdbm_1_13.nix  hpc.nix  intel-installer-common.nix  intel-update.nix  intel-update.sh  libgdbm-legacy.nix  oneapi-construction-kit.nix  unified-memory-framework.nix  unified-runtime.nix  ur.patch  ur2.patch
nix/intel-kit/: base.nix  default.nix  gdbm_1_13.nix  intel-installer-common.nix  opencl-clang_14.nix
nix/intel-kit/packaging-scripts/: update.sh
nix/intel-kits/: base.nix  default.nix  gdbm_1_13.nix  hpc.nix  intel-installer-common.nix
nix/intel/llvm/: default.nix  deps.nix  package.nix  unified-runtime.nix
nix/intel/packaging-scripts/: filter-deps.sh  update.sh
nix/uxl/: default.nix  dnn.nix  tbb.nix
onednn/: CMakeLists.txt  Justfile
sycl-matmul/: CMakeLists.txt  flake.nix  justfile
sycl-matmul/src/: matmul.cpp
thundercube/: Cargo.toml  cubecl.toml
thundercube/benches/: broadcast.rs  elementwise.rs  load_store.rs  mma.rs  reduce.rs
thundercube/examples/: hello_world.rs  persistent_stream.rs
thundercube/src/: binary_ops.rs  lib.rs  reduction_ops.rs  test_utils.rs  unary_ops.rs  util.rs
thundercube/src/cube/: broadcast.rs  load.rs  mma.rs  reduce.rs  store.rs
thundercube/src/cube/tests/: mma.rs  rw.rs
thundercube/src/plane/: load.rs  mma.rs  mod.rs  reduce.rs  store.rs
thundercube/src/plane/tests/: mma.rs  mod.rs  rw.rs  store_rt_direct.rs
thundercube/src/streaming/: mod.rs
thundercube/src/tiles/: dim.rs  mma.rs  mod.rs  rt.rs  st.rs  transpose.rs
thundercube/src/tiles/tests/: mma.rs  mod.rs
ttt/: .gitignore  Cargo.toml
ttt-embedding/: emb.py  flake.nix
ttt/cli/benches/: tile_configs.rs  ttt_benchmark.rs
ttt/cli/src/: artifact_info.rs  lib.rs  main.rs  metrics_export.rs
ttt/core/: Cargo.toml
ttt/core/src/: config.rs  lib.rs  linear.rs  mlp.rs  mlp2.rs  mlp3.rs  mlp4.rs  util.rs
ttt/data/src/: pretokenized.rs
ttt/fused/: Cargo.toml
ttt/fused/src/: lib.rs
ttt/fused/src/linear_fused/: api.rs  launch.rs  mod.rs  wrapper.rs
ttt/fused/src/linear_fused_tile/: api.rs  backward.rs  forward.rs  helpers.rs  launch.rs  streaming.rs  streaming_ptr_host.rs  streaming_ptr_wrapper.rs  streaming_wrapper.rs  wrapper.rs
ttt/kernels/: Cargo.toml
ttt/kernels/src/: gelu_tanh.rs  kernel.rs
ttt/kernels/src/gelu/: api.rs  types.rs
ttt/kernels/src/impls/: fusion.rs
ttt/layer/src/: block.rs  lib.rs  lm.rs  ttt.rs
ttt/tests/: validate_full.rs
ttt/training/: Cargo.toml
ttt/training/src/: inference.rs  lib.rs  text_generation.rs  training.rs
(+24 files in other folders)
