[package]
name = "ttt"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.0", features = [
    "ndarray",
    "train",
    "tui",
    "metrics",
    "autodiff",
    "cubecl",
    "fusion",
] }
burn-fusion = "0.20.0"
burn-cubecl = "0.20.0"
burn-backend = { version = "0.20.0", features = ["cubecl"] }
cubecl = "0.9.0"
cubek = { version = "0.1.0", features = ["reduce", "matmul"] }
half = "2.7"

tokenizers = { version = "0.22", features = ["http"] }

# Explicitly enable the rc feature of serde
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"

num-traits = "0.2"
derive-new = "0.7"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

thundercube = { version = "0.1.0", path = "../thundercube" }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "csv_output"] }
burn-import = "0.20.0"
safetensors = "0.7"

[[bench]]
name = "ttt_benchmark"
harness = false

[features]
default = ["rocm"]
bf16 = []
rocm = ["burn/rocm", "cubecl/hip"]
cuda = ["burn/cuda", "cubecl/cuda"]
wgpu = ["burn/wgpu"]
