[package]
name = "ttt"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20", features = [
    "ndarray",
    "train",
    "tui",
    "metrics",
    "autodiff",
    "cubecl",
    "fusion",
] }
burn-fusion = "0.20"
burn-cubecl = "0.20"
burn-backend = { version = "0.20", features = ["cubecl"] }
cubecl = "0.9"
cubek = { version = "0.1", features = ["reduce", "matmul"] }
half = "2.7"

tokenizers = { version = "0.22", features = ["http"] }

# Explicitly enable the rc feature of serde
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"

num-traits = "0.2"
derive-new = "0.7"
glob = "0.3"
memmap2 = "0.9"
bytemuck = { version = "1.24", features = ["derive"] }
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

thundercube = { version = "0.1", path = "../thundercube" }
paste = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "csv_output"] }
safetensors = "0.7"
thundercube = { path = "../thundercube", features = ["test-utils"] }
rand = "0.9"
paste = "1.0"
test-case = "3.3"

[[bench]]
name = "ttt_benchmark"
harness = false

[[bench]]
name = "tile_configs"
harness = false

[features]
default = []
bf16 = []
rocm = ["burn/rocm", "cubecl/hip", "thundercube/rocm"]
cuda = ["burn/cuda", "cubecl/cuda", "thundercube/cuda"]
wgpu = ["burn/wgpu", "cubecl/wgpu", "thundercube/wgpu"]
cpu = ["burn/cpu", "cubecl/cpu", "thundercube/cpu"]

sweep_tests = []
