[package]
name = "thundercube"
version = "0.1.0"
edition = "2024"

[dependencies]
cubecl = { version = "0.9.0", features = ["test-runtime"] }
half = "2"
paste = "1"
test-case = { version = "3", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
test-case = "3"
rand = "0.9"

[features]
default = ["hip"]
hip = ["cubecl/hip"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
cpu = ["cubecl/cpu"]
test-utils = ["dep:test-case", "dep:rand"]
