[package]
name = "thundercube"
version = "0.1.0"
edition = "2024"

[dependencies]
cubecl = { version = "0.9.0", features = ["test-runtime"] }
half = "2"
paste = "1"
test-case = { version = "3", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
test-case = "3"
rand = "0.9"
criterion = { version = "0.8", features = ["html_reports"] }
pollster = "0.4"

[[bench]]
name = "mma"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "load_store"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "elementwise"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "broadcast"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "reduce"
harness = false
required-features = ["test-utils"]

[features]
default = ["hip"]
hip = ["cubecl/hip"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
cpu = ["cubecl/cpu"]
test-utils = ["dep:test-case", "dep:rand"]
