[package]
name = "ttt-core"
version.workspace = true
edition.workspace = true

[dependencies]
ttt-common = { workspace = true }
ttt-kernels = { workspace = true }
burn = { workspace = true, features = ["autodiff", "cubecl", "fusion"] }
burn-backend = { workspace = true, features = ["cubecl"] }
half.workspace = true
num-traits.workspace = true
derive-new.workspace = true
serde.workspace = true
paste.workspace = true

[features]
default = []
bf16 = ["ttt-kernels/bf16"]
rocm = ["ttt-kernels/rocm"]
cuda = ["ttt-kernels/cuda"]
wgpu = ["ttt-kernels/wgpu"]
cpu = ["ttt-kernels/cpu"]
