[package]
name = "ttt-harness"
version.workspace = true
edition.workspace = true

[dependencies]
ttt-common.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap.workspace = true
tokio = { version = "1", features = ["full", "process"] }
toml = "0.8"
fs2 = "0.4"
indicatif = "0.17"
thiserror = "2"
tracing.workspace = true
tracing-subscriber.workspace = true
libc = "0.2"

[[bin]]
name = "ttt-harness"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
