[package]
name = "ttt-training"
version.workspace = true
edition.workspace = true

[dependencies]
ttt-core = { workspace = true }
ttt-layer = { workspace = true }
ttt-data = { workspace = true }
ttt-fused = { workspace = true }
burn = { workspace = true, features = ["train", "tui", "metrics", "std"] }

[features]
default = []
bf16 = ["ttt-layer/bf16"]
rocm = ["ttt-layer/rocm"]
cuda = ["ttt-layer/cuda"]
wgpu = ["ttt-layer/wgpu"]
cpu = ["ttt-layer/cpu"]
streaming = ["ttt-layer/streaming"]
