[package]
name = "ttt-fused"
version.workspace = true
edition.workspace = true

[dependencies]
ttt-kernels = { workspace = true }
ttt-core = { workspace = true }
burn = { workspace = true, features = ["autodiff", "cubecl", "fusion"] }
burn-fusion.workspace = true
burn-cubecl.workspace = true
burn-backend.workspace = true
cubecl.workspace = true
cubek.workspace = true
thundercube.workspace = true
tracing.workspace = true
paste.workspace = true

[features]
default = []
bf16 = ["ttt-kernels/bf16", "ttt-core/bf16"]
rocm = ["burn/rocm", "cubecl/hip", "thundercube/rocm", "ttt-kernels/rocm", "ttt-core/rocm"]
cuda = ["burn/cuda", "cubecl/cuda", "thundercube/cuda", "ttt-kernels/cuda", "ttt-core/cuda"]
wgpu = ["burn/wgpu", "cubecl/wgpu", "thundercube/wgpu", "ttt-kernels/wgpu", "ttt-core/wgpu"]
cpu = ["burn/cpu", "cubecl/cpu", "thundercube/cpu", "ttt-kernels/cpu", "ttt-core/cpu"]
streaming = []
